styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.5;
    color: #1B1B1B;
}

body {
    height: 100%;
}

h1, h2 {
    margin: 0;  
}

ul li {
    list-style-type: none;
}

a {
    text-decoration: none;
}

.nav_header_widescreen {
    display: none;
}

.wrapper {
    width: 87.5vw;
    max-width: 1600px;
    height: 100%;
    margin: auto;
}

.logo_wrapper {
    width: 100%;
    max-width: 485px;
}

.logo_link  {
    display: flex;
    align-items: center;
}

.logo {
    width: 60px;
}

.logo_name {
    font-family: 'Fraunces', serif;
    font-size: 13px;
    font-weight: 600;
    color: #338EEE;
    white-space: pre;
    margin-left: 8px;
}

.btn {
    display: inline-block;
    font-family: 'Fraunces', serif;
    font-size: 16px;
    font-weight: 700;
    color: #338EEE;
    border-radius: 40px;
    background-color: #FED500;
    padding: 16px 40px 16px 40px;
    transition: all .35s;
}

.btn:hover {
    background-color: #F9FE00;
    transition: all .35s;
}

.icon_burger_wrapper {
    display: flex;
    align-items: center;
    width: 40px;
    height: 40px;
}

.icon_burger {
    display: inline-block;
    position: relative;
    width: 40px;
    height: 5px;
    background-color: #338EEE;
    border-radius: 5px;
}

.icon_burger::before {
    content: '';
    position: absolute;
    bottom: 13px;
    left: 0;
    width: 40px;
    height: 5px;
    background-color: #338EEE;
    border-radius: 5px;
}

.icon_burger::after {
    content: '';
    position: absolute;
    top: 13px;
    left: 0;
    width: 40px;
    height: 5px;
    background-color: #338EEE;
    border-radius: 5px;
}

.icon_cross_wrapper {
    position: absolute;
    top: 20px;
    right: 20px;
    width: 40px;
    height: 40px;
    cursor: pointer;
}

.icon_cross {
    position: absolute;
    top: 50%;
    width: 40px;
    height: 2px;
    background-color: #ccc;
    transform: rotate(45deg);
}

.icon_cross::before {
    content: '';
    position: absolute;
    width: 40px;
    height: 2px;
    background-color: #ccc;
    transform: rotate(90deg);
}

.nav_header_mobile {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #fbfbfb;
    transform: translateY(-490px);
    transition: 'transform 1s';
    transition-timing-function: 'ease-out';
    z-index: 2;
}

.header_wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

.nav_header_mobile .main_menu_wrapper {
    display: flex;
    justify-content: center;
    padding-top: 100px;
    padding-bottom: 50px;
}

.nav_header_mobile .main_menu_list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.main_menu_item .menu_link {
    font-size: 24px;
    color: #338EEE;
}

.main_menu_item .menu_link:hover {
    color: #FED500;
    transition: color .35s;
}

.nav_header_mobile .main_menu_item:nth-child(n+2) {
    margin-top: 40px;
}

.header .social_links_wrapper {
    width: 100%;
    border-bottom: 1px solid #FED500;
}

.social_links {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 10px;
    padding-bottom: 10px;
    width: 100%;
    max-width: 289px;
}

.social_icon {
    vertical-align: middle;
}

.footer {
    background: #F6FBFF;
}

.footer_content_top {
    padding-bottom: 34px;
    padding-top: 54px;
}

.footer_content_left {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 34px;
    max-width: 376px;
}

.footer .logo_wrapper {
    margin-bottom: 24px;
    width: unset;
}

.footer .logo {
    width: 65px;
}

.footer .logo_name {
    white-space: unset;
    font-size: 15px;
}

.nav_footer .menu_title {
    font-size: 18px;
    text-transform: uppercase;
    margin-bottom: 12px;
}

.nav_footer .main_menu_wrapper {
    display: flex;
    justify-content: space-between;
}

.nav_footer .main_menu_item {
    margin-bottom: 12px;
}

.nav_footer .main_menu_item:last-child {
    margin-bottom: 0;
}

.nav_footer .menu_link {
    font-size: 16px;
}

.footer .social_links_wrapper {
    width: 100%;
    background: #338EEE;
}

.footer .social_links {
    padding-bottom: 20px;
    max-width: 210px;
}

.footer .social_link {
    display: flex;
}

.fb_social_icon path {
    fill: #FFF;
    transition: fill .35s;
}

.fb_social_icon:hover path {
    fill: #FED500;
    transition: fill .35s;
}

.tw_social_icon path {
    fill: #FFF;
    transition: fill .35s;
}

.tw_social_icon:hover path {
    fill: #FED500;
    transition: fill .35s;
}

.youtube_social_icon path {
    fill: #FFF;
    transition: fill .35s;
}

.youtube_social_icon:hover path {
    fill: #FED500;
    transition: fill .35s;
}

.wa_social_icon path {
    fill: #FFF;
    transition: fill .35s;
}

.wa_social_icon:hover path {
    fill: #FED500;
    transition: fill .35s;
}

.tg_social_icon path:first-child {
    fill: #FFF;
    transition: fill .35s;
}

.tg_social_icon:hover path:first-child {
    fill: #FED500;
    transition: fill .35s;
}

.sk_social_icon path {
    fill: #FFF;
    transition: fill .35s;
}

.sk_social_icon:hover path {
    fill: #FED500;
    transition: fill .35s;
}

.copyright {
    color: #fff;
}

.footer_content_bottom {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

.carousel {
    width: 100%;
    height: 378px;
    display: flex;
    justify-content: flex-start;
    position: relative;
}

.slider {
    width: 100%;
    height: 100%;
}

.slide {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    z-index: 0;
    transition: all 1s;
    background-size: cover;
    background-repeat: no-repeat;
}
/* ... */

